# Compiler

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  error.h  grammar.h  lexical.h  main.cpp  output.h  table.h  type.h  word.h
.github/workflows/: c-cpp.yml
data/: checker.py
graph/: dom_tree.h  graph.h  graph_ssa.h  tree.h
ir/: ir.h  ir_block.h  ir_code.h  ir_fun.h  ir_new.cpp  ir_new.h  ir_table.h
lib/: binary_exp.h  block.h  comp_unit.h  function.h  node.h  single_exp.h  value.h
list/: mylist.h  mylist_block.h
mips/: mips.h  mips_code.h  mips_output.h  mips_table.h  register.h
